# kirikiri-x

./: .gitmodules  CMakeLists.txt  KirikiriS.sln  README.md  meson.build  vcpkg.json
.github/workflows/: workflow.yml  workflow_desktop.yml
KirikiriS/: Class1.cs  KirikiriCore.cs
KirikiriS.Runtime.Windows/: KirikiriS.Runtime.Windows.csproj  Program.cs
KirikiriS.Tjs2/: Definitions.cs  KirikiriS.Tjs2.csproj  Tjs.cs
KirikiriS.Tjs2/Interfaces/: IDispatch.cs  ITjsDispatch.cs  ITjsNativeInstance.cs
KirikiriS.Tjs2/Types/: CustomObject.cs  TjsVariant.cs  TjsVariantClosure.cs  Variant.cs  VariantClosure.cs  VariantClosureStruct.cs  VariantStruct.cs
src/liboniguruma/: .gitignore  CMakeLists.txt  configure
src/liboniguruma/test/: Makefile.in
src/libruntime/: CMakeLists.txt  event_manager.cc  event_manager.h  events.cc  events.cpp  events.h  graphics.cc  graphics.h  libruntime.cc  libruntime.h  main.cc  messages.cc  messages.h  script_manager.cc  script_manager.h  window_manager.cc  window_manager.h
src/libruntime/interfaces/: console.h  filepath.h  filesystem.h  filesystem_interface.h  sysfunc.h  system_gui.h  system_interface.cpp  system_interface.h
src/libruntime/native_classes/: layer.cc  layer.h  minimal.cc  minimal.h  rect.cc  system.cc  system.h  window.cc  window.h  window_class.cc
src/libruntime/native_instances/: layer_instance.cc  layer_instance.h  rect_instance.cc  rect_instance.h  window_instance.cc  window_instance.h
src/libruntime/native_objects/: minimal.cc  minimal.h  system.cc  system.h
src/libruntime/rendering/: layer_tree.cc
src/libruntime/types/: rect.h
src/libtjs2/: CMakeLists.txt  tjs.cpp  tjs.h  tjs.tab.cpp  tjsArray.cpp  tjsBinarySerializer.cpp  tjsBinarySerializer.h  tjsByteCodeLoader.cpp  tjsByteCodeLoader.h  tjsCommHead.h  tjsCompileControl.cpp  tjsConfig.cpp  tjsConfig.h  tjsConstArrayData.cpp  tjsConstArrayData.h  tjsDate.cpp  tjsDate.h  tjsDebug.cpp  tjsDebug.h  tjsDictionary.cpp  tjsDictionary.h  tjsDisassemble.cpp  tjsError.h  tjsHashSearch.h  tjsInterCodeExec.cpp  tjsInterCodeGen.cpp  tjsInterCodeGen.h  tjsLex.cpp  tjsMessage.h  tjsNamespace.cpp  tjsNative.cpp  tjsObject.cpp  tjsObjectExtendable.h  tjsOctPack.cpp  tjsScriptBlock.cpp  tjsScriptBlock.h  tjsString.cpp  tjsString.h  tjsTypes.h  tjsUtils.h  (+4 more)
src/libtjs2/coreutils/: cp932_uni.cpp  cp932_uni.h  uni_cp932.cpp  uni_cp932.h
src/libtjs2/encodings/: CharacterSet.cpp  CharacterSet.h  cp932_uni.cpp  cp932_uni.h  uni_cp932.cpp
src/libtjs2/syntax/: tjs.y  tjspp.y
src/linux/: CMakeLists.txt  filepath_impl.cc  filepath_impl.h  main.cc  sysfunc_impl.cpp  sysfunc_impl.h  systemgui_impl.cc  systemgui_impl.h
src/runtime/: CMakeLists.txt
src/runtime/core/: CMakeLists.txt  event_manager.cc  event_manager.h  layer_manager.cc  layer_manager.h  libruntime.cc  libruntime.h  messages.cc  messages.h  script_manager.cc  script_manager.h
src/runtime/core/interfaces/: console.h  environment.h  filesystem.h  sysfunc.h  system_ui.h
src/runtime/core/native_classes/: layer.cc  rect.cc  rect.h  system.cc  system.h  window.h
src/runtime/core/native_instances/: layer_instance.h  rect_instance.h  window_instance.h
src/runtime/core/rendering/: layer_tree.h
src/runtime/core/storage/: unified_storage_path.cc  unified_storage_path.h
src/runtime/core/storages/: unified_path.cc  unified_path.h
src/runtime/tjs2/: CMakeLists.txt  tjs.h  tjs.tab.cpp  tjsArray.cpp  tjsArray.h  tjsCommHead.h  tjsConfig.h  tjsConstArrayData.cpp  tjsDate.cpp  tjsDateParser.cpp  tjsDebug.cpp  tjsDictionary.cpp  tjsDisassemble.cpp  tjsError.h  tjsInterCodeExec.cpp  tjsInterCodeGen.cpp  tjsInterCodeGen.h  tjsInterface.h  tjsMessage.cpp  tjsNative.h  tjsRegExp.cpp  tjsString.cpp  tjsString.h  tjsVariantString.cpp  tjsVariantString.h
src/runtime/tjs2/encodings/: CharacterSet.cpp  cp932_uni.cpp  uni_cp932.h
src/runtime/tjs2/syntax/: tjs.y  tjsdate.y
src/tests/: CMakeLists.txt
src/tests/core/native_instances/: rect.cc
src/windows/: CMakeLists.txt  console_impl.cc  console_impl.h  filesystem.cc  filesystem.h  filesystem_impl.cc  filesystem_impl.h  localfile_stream.cpp  localfile_stream.h  main.cc  main.h  systemgui_impl.cc  systemgui_impl.h  windows_utils.cc  windows_utils.h
